fixed indicator to stay at bottom, was overlapping about section

--- a/src/pages/scss/indicator.module.scss
+++ b/src/pages/scss/indicator.module.scss
@@ -1,10 +1,9 @@
 .indicator {
   position: relative;
-  bottom: -700%; // moves specifically banner one to the bottom
   margin: 0 auto;
   width: 25px;
   height: 25px;
-  transform: translateX(-50%) translateY(75%) rotate(45deg);
+  transform: translateX(-50%) rotate(45deg);
 }
 
 .indicator span {
